# VISSSlib

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  setup.py
docs/source/: api.rst  conf.py  examples.rst  index.rst  installation.rst  variables.rst
docs/source/examples/variables/: FFT.ipynb
notebooks/: analyze_opencv_angle_definition.ipynb  example_analyzeLevel1Track.ipynb  match_estimate_rotation.ipynb
notebooks/.ipynb_checkpoints/: match_estimate_rotation-checkpoint.ipynb
src/VISSSlib/: __init__.py  __main__.py  analysis.py  av.py  detection.py  distributions.py  files.py  fixes.py  matching.py  metadata.py  products.py  quicklooks.py  scripts.py  time.py  tools.py  tracking.py
src/VISSSlib/level3/: __init__.py  aux.py  combined_riming.py
tests/: test_detection.py  test_distributions.py  test_matching.py  test_tracking.py
